Fix navbar behaviour and navbar alignment
This commit fixes the navbar layout: The buttons are now dead-center thanks
to the grid-layout combined with the flex-layout inside
It is sticky too so you can always keep the navbar on top

TODO: Change the order and add button when device is too small
--> The empty div can contain a button for this which only gets activated
when the grid items can't scale anymore

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ html{
 body{
     background-color: rgb(44, 44, 44);
     color: white;
+    margin: 0%;
     
 }
 
@@ -24,14 +25,23 @@ body{
     margin-bottom: 30%;
 }
 
+.navTopGrid{
+    display: grid;
+    padding-inline: 2.5rem;
+    grid-template-columns: minmax(10rem, auto) 8fr minmax(10rem, auto);
+    background-color: rgb(49, 49, 49);
+}
+
 .navigatorTop{
-    display: flex;
     margin: auto;
     text-align: center;
     flex-direction: row;
-    height: 50px;
     align-items: center;
     justify-content: center;
+    position: sticky;
+    top: 0rem;
+    border: none;
+    border-radius: 8px;
 }
 
 .navigatorTop a{
